# Aramis

./: .gitignore  Makefile  grammar.txt  pyproject.toml  setup.py
src/aramis/: langs.py  lexer.py  parser.py  rules.py  trigram.py  weights.py
tests/issue_00001/: test_lexer.py  test_parser.py
