[tool.poetry]
name = "aramis"
version = "0.1.0+a1"
description = "Another NLP engine"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
cyhunspell = "^2.0"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
ipython = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
