[tool.poetry]
name = "aramis"
version = "0.1.0+a2"
description = "Another NLP engine"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
hunspell-cffi = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
ipython = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
