[tool.poetry]
name = "aramis"
version = "0.1.0+a2"
description = "Another NLP engine"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
hunspell-cffi = { version = "^1.1.2", optional = true }

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
ipython = "*"

[tool.poetry.extras]
hunspell = ["hunspell-cffi"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
